--- a/openshift/helm-chart-tutorial/hello-springboot/templates/deployment.yaml
+++ b/openshift/helm-chart-tutorial/hello-springboot/templates/deployment.yaml
@@ -5,8 +5,6 @@ metadata:
   labels:
     app: {{ .Values.appName }}
     version: v1
-  annotations:
-    alpha.image.policy.openshift.io/resolve-names: '*'
 spec:
   replicas: {{  .Values.replicaCount }}
   selector:
@@ -18,6 +16,10 @@ spec:
       labels:
         app: {{ .Values.appName }}
         version: v1
+    {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+    {{ end }}
     spec:
       containers:
       - name: {{ .Values.appName }}
@@ -38,11 +40,3 @@ spec:
             path: /actuator/health
             port: 8080
           initialDelaySeconds: 10
-        # resources: 
-        #   limits: 
-        #     cpu: 100m
-        #     memory: 128Mi
-        # requests:
-        #   cpu: 100m
-        #   memory: 128Mi
-
